Fix issue with categories bar on small screens

--- a/app/styles/pages/dashboard.less
+++ b/app/styles/pages/dashboard.less
@@ -88,6 +88,9 @@
 
   .site-nav { margin-top: @site-head-height;}
   .site-nav {
+    ul {
+      margin-left: 8.333333%;
+    }
     a {
       color: white;
       &.category-inactive {
